tests/fixtures/errors/member_not_public.z
# Reading a private member (excluded from the `public:` block) from outside the
# type is rejected: `_dist` is not in `public: unit { :x :y }`.
point: record { x: i64 y: i64 _dist: i64 } as {
    public: unit { :x :y }
}

main: function is {
    p: point x: 3 y: 4 _dist: 5
    d: p._dist
    print "\{d}"
}
